# coslam

./: .gitignore  CMakeLists.txt  CMakeLists_copy.txt  FindSuiteSparse.cmake  Findefusion.cmake  main.cpp  package.xml  readme.md  ubuntu18.sh
docs/: needtodo.md  processframe.md
gazebo/models/holonomic_robot/: model.urdf.xacro
gazebo/models/jackal/: jackal_cam_depth.urdf.xacro
gazebo/models/jackal/sensors/camera/: r200.urdf.xacro
gazebo/models/jackal/sensors/hokuyo/: hokuyo.urdf.xacro
gazebo/models/office/: model.config
gazebo/models/rgbd_camera/: common_properties.urdf.xacro  r200.urdf.xacro
gazebo/models/robot/: apriltag_marker.xacro  lightmodel.xacro  model.xacro  tag.xacro
gazebo/worlds/: bookstore.world  office.world  office1.world  simple_warehouse.world
graph/: processframe.graphml
launch/: rgb.launch  robot.launch  world.launch  world_jackal.launch  world_robot.launch
launch/jackal_cam/: jackal_base.launch
launch/small_robot/: robot_base.launch
launch/test_files/: apriltag_demo.launch  test_frame.launch  test_jackal.launch  test_rgb.launch  tgazebo_sdf.launch  tgazebo_urdf.launch  trviz.launch
src/: rosEfusion.cpp  rosElastic.cpp  rosElastic.h  ubuntu18_all.sh
src/Core/: Deformation.cpp  Deformation.h  ElasticFusion.cpp  ElasticFusion.h  Ferns.cpp  Ferns.h  GPUTexture.cpp  GPUTexture.h  GlobalOdometry.cpp  GlobalOdometry.h  RGBDOdometry.cpp  RGBDOdometry.h
src/Core/cuda/: GPUConfig.h  cudafuncs.cu  reduce.cu
src/Core/src/: .gitignore  ElasticFusion.cpp  ElasticFusion.h
src/Core/src/Shaders/: Resize.h
src/Core/src/Utils/: GPUConfig.h  GlobalCamInfo.cpp  GlobalCamInfo.h
src/GLDisplay/: ComputePack.cpp  ComputePack.h  FeedbackBuffer.cpp  FeedbackBuffer.h  FillIn.cpp  FillIn.h  GUI.cpp  GUI.h  GlobalCamTexture.h  GlobalModel.cpp  GlobalModel.h  IndexMap.cpp  IndexMap.h  Resize.h
src/GLDisplay/Shaders/: Shaders.h  Vertex.h  copy_unstable.vert  data.vert  global_rgb.frag  splat.vert  update.vert  vertex_feedback.vert
src/Tools/: GUI.h  GroundTruthOdometry.cpp  GroundTruthOdometry.h  LiveLogReader.cpp  LiveLogReader.h  LogReader.h  ROSLogReader.cpp  ROSLogReader.h  RawLogReader.cpp  RawLogReader.h
src/Tools/rosinterface/: collectdata.cpp  dataInterface.cpp  dataInterface.h  rosInterface.cpp  rosInterface.h
src/Utils/: DeformationGraph.cpp  DeformationGraph.h  GlobalCamInfo.h  Img.h  LocalCameraInfo.cpp  LocalCameraInfo.h  Parse.h  Stopwatch.h
src/rosinterface/: RosFunctions.cpp  dataInterface.cpp  dataInterface.h  rosInterface.cpp  rosInterface.h
src/test/: logreader.cpp  rawlogreader.cpp  rosinterface.cpp  roslogreader.cpp  small.cpp
src/test/realsense/: DataCollection.cpp  DataCollection.h  realsense_parameters.txt  saveData.cpp
test/: .gitignore  CMakeLists.txt  main.cpp
test/dataset/: ORBvoc_no.txt
test/dataset/realsense/: realsense.yaml  timeFile.txt
test/dataset/test_set/: EuRoC.yaml  MH01.txt
test/src/: Converter.cpp  Converter.h  Frame.cpp  Frame.h  Initializer.cpp  Initializer.h  ORBVocabulary.h  ORBextractor.cpp  ORBextractor.h  ORBmatcher.cpp  ORBmatcher.h  System.cpp  System.h  Tracking.cpp  Tracking.h
test/src/drawer/: Drawer.cpp  Drawer.h  FrameDrawer.cpp  FrameDrawer.h
